[package]
name = "esp32-ds18b20"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.14.1", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
]}

esp-hal = { version = "0.21.0", features = [
    "esp32",
] }
esp-println = { version = "0.12.0", features = ["esp32", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.5.0" }
embedded-io = "0.6.1"

embedded-io-async = "0.6.1"
embassy-net = { version = "0.4.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }

esp-wifi = { version = "0.10.1", default-features=false, features = [
    "esp32",
    "phy-enable-usb",
    "utils",
    "wifi",
    "wifi-default",
    "esp-alloc",
    "log",
    "async",
    "embassy-net",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
embassy-executor = { version = "0.6.0",  features = [
    "task-arena-size-12288",
] }
embassy-time     = { version = "0.3.1",  features = ["generic-queue-8"] }
esp-hal-embassy  = { version = "0.4.0",  features = ["esp32"] }
static_cell      = { version = "2.1.0",  features = ["nightly"] }
embedded-hal = "1.0.0"
ds18b20 = { git = "https://github.com/elwerene/ds18b20.git", version = "0.1.1" }
one-wire-bus = { git = "https://github.com/daniel-larsen/one-wire-bus.git", version = "0.2.0" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
